[gd_scene load_steps=16 format=3 uid="uid://b28yyeow7hgu1"]

[ext_resource type="PackedScene" uid="uid://brxwrrwal0p6b" path="res://Prefabs/levels/background.tscn" id="1_20048"]
[ext_resource type="Script" uid="uid://dm0jvt4o0gvhw" path="res://Prefabs/levels/game_fase_1.gd" id="1_ssddj"]
[ext_resource type="PackedScene" uid="uid://dja0t6rqc7xpg" path="res://Prefabs/player_final.tscn" id="4_h7xhi"]
[ext_resource type="Script" uid="uid://pkfxsbeai2lg" path="res://Prefabs/caminho.gd" id="5_2f2xo"]
[ext_resource type="PackedScene" uid="uid://bk7borty1x5ya" path="res://Prefabs/levels/tilemap.tscn" id="5_6v0wk"]
[ext_resource type="PackedScene" uid="uid://q15j426yec4c" path="res://Prefabs/enemy_flying.tscn" id="5_j2fh8"]
[ext_resource type="PackedScene" uid="uid://cw54xulhcegc4" path="res://Prefabs/enemy.tscn" id="5_trkr1"]
[ext_resource type="PackedScene" uid="uid://b43e0ea8htv6i" path="res://Prefabs/objects/camera_2d.tscn" id="8_ssddj"]
[ext_resource type="PackedScene" uid="uid://b7sn54tnh7gle" path="res://Prefabs/next_level_portal.tscn" id="8_ulofw"]
[ext_resource type="AudioStream" uid="uid://bs13wnu7oewu8" path="res://Assets/sounds/background.mp3" id="9_68d1h"]
[ext_resource type="Texture2D" uid="uid://b4bwnu5wwg6kv" path="res://icon.svg" id="10_l2r2m"]
[ext_resource type="Script" uid="uid://4mle1as4dnba" path="res://Prefabs/item_base.gd" id="11_jsw86"]
[ext_resource type="AudioStream" uid="uid://804dghn1u4uk" path="res://Assets/sounds/Item Pickup.mp3" id="12_ssddj"]

[sub_resource type="Curve2D" id="Curve2D_trkr1"]
_data = {
"points": PackedVector2Array(1.2381, -45.730255, -1.2381, 45.730255, -101.43773, -29.558403, -1.6049706, 44.840668, 1.6049706, -44.840668, 0, 0, 59.610195, 1.3020115, -59.610195, -1.3020115, -46.99231, -59.82906, 0, 0, 0, 0, -102.16853, -29.558403, 0, 0, 0, 0, -101.80313, -29.558403)
}
point_count = 5

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qr7x8"]
size = Vector2(53, 48)

[node name="Game" type="Node2D"]
script = ExtResource("1_ssddj")
metadata/_edit_vertical_guides_ = [4426.0]

[node name="fase1_tilemap" parent="." instance=ExtResource("5_6v0wk")]

[node name="Background_paralax" parent="." instance=ExtResource("1_20048")]

[node name="Enemies" type="Node2D" parent="."]

[node name="Enemy" parent="Enemies" groups=["Enemies"] instance=ExtResource("5_trkr1")]
position = Vector2(707, 436.00003)
rotation = 3.1415927
scale = Vector2(2.807778, -2.807778)
SPEED = 250.0

[node name="Enemy2" parent="Enemies" groups=["Enemies"] instance=ExtResource("5_trkr1")]
position = Vector2(1710, 552)
rotation = 3.1415927
scale = Vector2(2.807778, -2.807778)

[node name="Path2D3" type="Path2D" parent="Enemies"]
position = Vector2(2849.0002, 183.00002)
scale = Vector2(2.7366858, 2.808)
curve = SubResource("Curve2D_trkr1")
script = ExtResource("5_2f2xo")
speed = 40.0

[node name="PathFollow2D" type="PathFollow2D" parent="Enemies/Path2D3"]
position = Vector2(-6.454632, 15.132184)
rotation = 0.63869625
progress = 121.70896
rotates = false

[node name="fly_enemy" parent="Enemies/Path2D3/PathFollow2D" node_paths=PackedStringArray("player") groups=["Enemies"] instance=ExtResource("5_j2fh8")]
rotation = -0.59608513
skew = -0.02301693
player = NodePath("../../../../Player Final")

[node name="Path2D2" type="Path2D" parent="Enemies"]
position = Vector2(838, 227)
scale = Vector2(2.7366858, 2.808)
curve = SubResource("Curve2D_trkr1")
script = ExtResource("5_2f2xo")
speed = 40.0

[node name="PathFollow2D" type="PathFollow2D" parent="Enemies/Path2D2"]
position = Vector2(-6.454632, 15.132184)
rotation = 0.63869625
progress = 121.70896
rotates = false

[node name="fly_enemy" parent="Enemies/Path2D2/PathFollow2D" node_paths=PackedStringArray("player") groups=["Enemies"] instance=ExtResource("5_j2fh8")]
rotation = -0.59608513
skew = -0.02301693
player = NodePath("../../../../Player Final")

[node name="w" parent="Enemies" groups=["Enemies"] instance=ExtResource("5_trkr1")]
position = Vector2(3433.0002, 818.00006)
rotation = 3.1415927
scale = Vector2(2.807778, -2.807778)

[node name="w2" type="Path2D" parent="Enemies"]
position = Vector2(4117, 663)
scale = Vector2(2.7366858, 2.808)
curve = SubResource("Curve2D_trkr1")
script = ExtResource("5_2f2xo")
speed = 40.0

[node name="PathFollow2D" type="PathFollow2D" parent="Enemies/w2"]
position = Vector2(-6.454632, 15.132184)
rotation = 0.63869625
progress = 121.70896
rotates = false

[node name="fly_enemy" parent="Enemies/w2/PathFollow2D" node_paths=PackedStringArray("player") groups=["Enemies"] instance=ExtResource("5_j2fh8")]
rotation = -0.59608513
skew = -0.02301693
player = NodePath("../../../../Player Final")

[node name="Player Final" parent="." groups=["player"] instance=ExtResource("4_h7xhi")]
position = Vector2(205, 355)
scale = Vector2(0.326, 0.326)
collision_layer = 13

[node name="Camera2D" parent="Player Final" instance=ExtResource("8_ssddj")]
position = Vector2(-1659.6848, -1002.4684)
limit_left = 32
limit_top = 0
limit_right = 4420

[node name="next_level_portal" parent="." instance=ExtResource("8_ulofw")]
position = Vector2(4344.1714, 847.69586)
next_level = "res://Prefabs/levels/fase_final.tscn"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_68d1h")
volume_db = -8.503
autoplay = true

[node name="item_base" type="Sprite2D" parent="."]
position = Vector2(798.00006, -623.0001)
scale = Vector2(0.44233227, 0.44233227)
texture = ExtResource("10_l2r2m")
script = ExtResource("11_jsw86")

[node name="Area2D" type="Area2D" parent="item_base"]
scale = Vector2(2.260744, 2.260744)

[node name="CollisionShape2D" type="CollisionShape2D" parent="item_base/Area2D"]
shape = SubResource("RectangleShape2D_qr7x8")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="item_base"]
stream = ExtResource("12_ssddj")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="vidas_txt" type="Label" parent="CanvasLayer"]
offset_left = 38.0
offset_top = 23.0
offset_right = 78.0
offset_bottom = 46.0
scale = Vector2(1.2740585, 1.6850691)

[connection signal="damege" from="Enemies/Path2D3/PathFollow2D/fly_enemy" to="Enemies/Path2D3" method="_on_fly_enemy_damege"]
[connection signal="damege" from="Enemies/Path2D2/PathFollow2D/fly_enemy" to="Enemies/Path2D2" method="_on_fly_enemy_damege"]
[connection signal="damege" from="Enemies/w2/PathFollow2D/fly_enemy" to="Enemies/w2" method="_on_fly_enemy_damege"]
[connection signal="Damage" from="Player Final" to="." method="_on_player_final_damage"]
[connection signal="IsDeath" from="Player Final" to="." method="_on_player_final_is_death"]
[connection signal="body_entered" from="item_base/Area2D" to="item_base" method="_on_area_2d_body_entered"]
